--- a/src/public/pages/layouts/main.pug
+++ b/src/public/pages/layouts/main.pug
@@ -13,5 +13,7 @@ html(lang="pt-br")
         title=title
 
     body
+        if notifies
+            include ../components/_notifies.pug
 
         block page
