--- a/src/public/assets/css/globalConfigs.css
+++ b/src/public/assets/css/globalConfigs.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *, *::after, *::before {
     box-sizing: border-box;
     padding: 0;
@@ -9,8 +11,77 @@ html, body {
     height: 100%;
 }
 
+body { font-family: "Montserrat", sans-serif; }
+
 /** Notificações: */
 #_notifies {
     position: fixed;
     z-index: 999999;
+
+    right: 50px;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 30px;
+
+    & .notify-box {
+        position: relative;
+        width: 345px;
+        padding: 30px 0;
+        padding-left: 70px;
+        border: 1px solid #f4f4f4;
+        border-radius: 10px;
+        overflow: hidden;
+        font-size: 12px;
+
+        background-color: #fff;
+
+        & .notify-icon {
+            position: absolute;
+            height: 300px;
+            width: 300px;
+            left: -250px;
+            top: -100px;
+            border-radius: 50%;
+        }
+
+        & .error { background-color: #ffe0e0; }
+        & .success { background-color: #e4ffe0; }
+        & .warn { background-color: #fff3e0; }
+
+        & p.title { font-weight: 700; }
+        & p.message { font-weight: 300; }
+
+        & .notify-close {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background-color: #f8f8f8;
+            cursor: pointer;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        & .notify-close::after, .notify-close::before {
+            content: "";
+            display: block;
+            position: relative;
+            width: 12px;
+            height: 1px;
+            background-color: #555555;
+        }
+
+        & .notify-close::before { transform: rotate(-45deg); }
+        & .notify-close::after {
+            transform: rotate(45deg);
+            margin-top: -1px;
+        }
+    }
 }
